--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,12 @@
 version: 0.2
 
 phases:
-  pre_build:
+  install:
     commands:
-      - next build
+      - npm install
   build:
     commands:
-      - echo La compilación se completó en `date`
+      - npm run build
   post_build:
     commands:
-      - echo La compilación se completó en `date`
+      - npm run start
