--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,9 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      nodejs: 18.16.0
     commands:
-      - node --version
       - npm install
   build:
     commands:
