--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "follow-redirects": "^1.15.2",
-    "next": "^13.4.1",
+    "next": "^13.4.4",
     "postcss": "8.4.23",
     "react": "^18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2"
