--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react-icons": "^4.8.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2"
-  }
+  },
+  "engines": {
+    "node": "18.16.0"
+    }
 }
